# large-language-models-da

./: .gitignore  pyproject.toml
docs/: resources.md
notebooks/: LLM 00a - Install Datasets.ipynb  LLM 01 - LLMs with Hugging Face.ipynb  LLM 01L - LLMs with Hugging Face Lab.ipynb  LLM 02 - Embeddings, Vector Databases, and Search.ipynb  LLM 02L - Embeddings, Vector Databases, and Search.ipynb  notebook_helper.py
