[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Michael Booth", email = "michael@databooth.com.au"},
]
dependencies = [
    "dbacademy @ git+https://github.com/databricks-academy/dbacademy",
    "pandas>=2.1.3",
    "matplotlib>=3.8.2",
    "llama-index>=0.9.6.post2",
    "sacremoses>=0.1.1",
    "nlptest==1.1.0",
    "setuptools>=69.0.2",
    "protobuf>=4.25.1",
    "datasets>=2.15.0",
]
requires-python = ">=3.10.13,<3.11.1"
readme = "README.md"
license = {text = "MIT"}

[tool.pdm.dev-dependencies]
dev = [
    "notebook>=7.0.6",
    "black[jupyter]>=23.11.0",
    "itables>=1.6.2",
]
